clusters/dev/infrastructure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gw
  namespace: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds: [{ kind: HTTPRoute }]

    - name: tcp-audio
      protocol: TCP
      port: 9000
      allowedRoutes:
        kinds: [{ kind: TCPRoute }]
